--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ p {
     width: 100%;
     height: auto;
  }
-
+/*
 .googleCalendar{
     position: relative;
     height: 0;
@@ -35,6 +35,7 @@ p {
     width: 100%;
     height: 100%;
 }
+*/
 
 a,
 a:hover,
